[package]
name = "macmon"
version = "0.2.2"
edition = "2021"

[lints.rust]
non_camel_case_types = "allow"
unused_assignments = "allow"
unreachable_code = "allow"

[profile.release]
panic = "abort"
strip = false

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
core-foundation = "0.9.4"
libc = "0.2.155"
ratatui = "0.27.0"
serde_json = "1.0.117"
serde = { version = "1.0", features = ["derive"] }
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rocket_cors = "0.6.0"

